--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
       label: ${SPRING_CLOUD_CONFIG_LEVEL:master}
       username: ${SPRING_CLOUD_CONFIG_USERNAME:geek_user}
       password: ${SPRING_CLOUD_CONFIG_PASSWORD:geek_pass}
-  datasource:
-    url: "jdbc:postgresql://localhost:5432/gb_shop"
-    username: "geek"
-    password: "geek"
+#  datasource:
+#    url: "jdbc:postgresql://localhost:5432/gb_shop"
+#    username: "geek"
+#    password: "geek"
 # /{label}/{application}-{profile}.yml
 # /{application}/{profile}/{label}
