--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,10 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
     implementation 'org.springframework.boot:spring-boot-starter-artemis'
     implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -50,10 +54,11 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 
 
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'com.h2database:h2'
 
-    implementation files('lib/gb-api-may-0.0.16-plain.jar')
+    implementation files('lib/gb-api-may-0.0.22-plain.jar')
 }
 
 dependencyManagement {
