--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,7 @@
+storage:
+  location:
+    './storage'
+
 server:
   port: 8080
 spring:
@@ -14,6 +18,12 @@ spring:
   artemis:
     user: 'admin'
     password: 'admin'
+
+servlet:
+  multipart:
+    max-file-size: 10MB
+    max-request-size: 10MB
+    enabled: true
 
 #logging:
 #  level:
